2017-04-10  Charlie Zender  <zender@uci.edu>

	* NCO 4.6.6-alpha04 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.6-alpha04 final changes';git push
	git tag -a 4.6.6-alpha04 -m 'Version 4.6.6-alpha04 new features: ncap2 cell_methods fix; 2-D UGRID; lst_rnk_ge2 time_bnds;';git push --tags

	* ncremap neareststod options now invokes neareststod when requested, not nearestdtos (doh!)

2017-04-10 Henry Butowsky  <henryb@hush.com>

	* Refactor nco_msa_rcr_clc() to use less memory and run faster for --msa_usr_rdr

2017-04-09  Charlie Zender  <zender@uci.edu>

	* Add Cell_[Along/Across]_Swath_mod04 to dimension database for	ncl_convert2nc compatibility

	* Hardwire exclusion of time_bnds into lst_rnk_ge2

	* Complete minimal UGRID metadata

	* Fix mask type conversion in nco_grd_nfr()

2017-04-08  Charlie Zender  <zender@uci.edu>

	* Add stubs to create UGRID grids from nco_grd_nfr()

2017-04-05  Charlie Zender  <zender@uci.edu>

	* NCO 4.6.6-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.6-alpha03 final changes';git push
	git tag -a 4.6.6-alpha03 -m 'Version 4.6.6-alpha03 new features: ncap2 atoi(), atof(), cell_methods; nco_grd_nfr OMI DOMINO; lst_rnk_ge2; JSON dims->shape';git push --tags

2017-04-01  Charlie Zender  <zender@uci.edu>

  	* Allow nco_grd_nfr() to read grid corners in non-canonical (crn_nbr,lat_nbr,lon_nbr) and permute to canonical (lat_nbr,lon_nbr,crn_nbr) order (for OMI DOMINO)

2017-03-30  Charlie Zender  <zender@uci.edu>

	* Add HINT when nco_grd_nfr() cannot find coordinates

2017-03-30 Henry Butowsky  <henryb@hush.com>

	* Add cell_methods CF convention to aggregate operations in ncap2 agg_cls()
	 Default is on, toggled by --cll_mth, --cell_method, --no_cell_method, --no_cll_mth

2017-03-26  Charlie Zender  <zender@uci.edu>

	* ncclimo: preliminary support for --lst_rnk_ge2

	* Splitter infrastructure: ncks --lst_rnk_ge2 prints extraction list of R>=2 variables and exits

2017-03-24  Charlie Zender  <zender@uci.edu>
